--- a/client/booking/src/app/components/pdetails/pdetails.component.scss
+++ b/client/booking/src/app/components/pdetails/pdetails.component.scss
@@ -11,3 +11,15 @@
     font-family: 'Staatliches';
     font-size: 30px;
 }
+
+.centered-container {
+    margin-top: 150px;
+    margin-left: 500px;
+    height: 30px;
+    width: 300px;
+    background: rgb(157, 199, 209);
+    align-items: center;
+    justify-content: center;
+    padding-left: 5px;
+    padding-top: 2px;
+}
